# coffee_shop

./: pyproject.toml
.github/workflows/: ci.yml
coffee_shop/: __init__.py  menu.py  order.py  pricing.py
tests/: test_menu.py  test_order.py  test_pricing.py
