[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coffee-shop"
version = "0.1.0"
description = "A simple coffee shop order and pricing system."
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
